--- a/package.json
+++ b/package.json
@@ -3,21 +3,31 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.21",
+    "@apollo/client": "^3.5.8",
     "@apollo/react-hooks": "^4.0.0",
-    "@material-ui/core": "^4.12.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^5.0.0-beta.5",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
-    "graphql": "^14.5.8",
+    "graphql": "^16.3.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.29.1",
+    "node": "^17.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-toastify": "^5.4.0",
     "react-use": "^17.2.4",
     "rebound": "^0.1.0",
+    "recharts": "^2.1.8",
+    "redux": "^4.1.2",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "scripts": {
