--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rebound": "^0.1.0",
     "recharts": "^2.1.8",
     "redux": "^4.1.2",
+    "reselect": "^4.1.5",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "scripts": {
